# ai_analysis

./: README.md  manage.py  pyproject.toml
ai_analysis/: asgi.py  settings.py  urls.py  wsgi.py
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_rename_db_aianalysislog.py  0003_alter_aianalysislog_confidence_and_more.py  0004_alter_aianalysislog_request_timestamp_and_more.py  0005_alter_aianalysislog_request_timestamp_and_more.py
app/templates/app/: index.html
