[tool.poetry]
name = "ai-analysis"
version = "0.1.0"
description = ""
authors = ["rayjasm <nymn112358@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
django = "4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
